--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,14 @@
         <h2>ウマ娘数据库翻译补丁</h2>
         <p>
           本项目通过修改 <code>master.mdb</code> 中的 <code>text_data</code> 表来实现 ウマ娘 プリティーダービー 的客户端翻译。<br/>
-          修改过程可完全通过该网页完成。如果你有兴趣帮助该项目，请前往 <a href="https://github.com/FabulousCupcake/umamusume-db-translate">GitHub 储存库</a>。
+          修改过程可完全通过该网页完成。如果你有兴趣帮助该项目，请前往 <a href="https://github.com/HorizonKinen/umamusume-db-translate-zh">GitHub 储存库</a>。
         </p>
         <h3>使用方法</h3>
         <ol>
           <li>找到你的 <code>master.mdb</code> 文件</li>
           <small>它通常存放在 <code>C:\Users\[你的用户名]\AppData\LocalLow\Cygames\umamusume\master\master.mdb</code></small>
           <li>使用此网页已翻译的 <code>master.mdb</code> 文件替换游戏原本的 <code>master.mdb</code> 文件</li>
+          <li>请一定要备份 <code>master.mdb</code> 文件，并使用<strong>游戏原本</strong>的 <code>master.mdb</code> 文件在本页进行替换。如果你不小心弄丢了你的原始文件，我们会在 <a href="https://github.com/HorizonKinen/umamusume-db-translate-zh/releases">Release</a> 中发布最新的原始版本和最新汉化版本</li>
         </ol>
         <div class="text-center m-5">
           <input id="dbfile" type="file" hidden>
